<resources>
    <string name="homefragment">Home</string>
    <string name="menu_devolucion">Solicitud devolución</string>
    <string name="menu_salir">SALIR</string>
    <string name="app_name">BibliotecaUTP</string>
    <string name="registro_de_devolucion">Registro de Devolucion</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="nombre_del_libro">Nombre del Libro</string>
    <string name="ingrese_libro">Ingrese Libro</string>
    <string name="fecha_de_prestamo">Fecha de Prestamo</string>
    <string name="fecha_de_devolucion">Fecha de Devolucion</string>
    <string name="confirmar_devolucion">Confirmar Devolucion</string>
    <string name="regresar_al_menu">Regresar al Menu</string>
    <string name="bienvenido_a_la_biblioteca">Bienvenido a la biblioteca</string>
    <string name="logo">Logo</string>
    <string name="comenzar">Comenzar</string>
    <string name="aqui_va_la_imagen">aqui_va_la_imagen</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="settings">Settings</string>
    <string name="registrarme">Registrarme</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="nombres">Nombres</string>
    <string name="dni">DNI</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="title_activity_opcionesmenu">opcionesmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textHome">Inicio</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>