<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DevolucionActivity"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="210dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:contentDescription="aqui_va_la_imagen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/libro1"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/labelRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/registro_de_devolucion"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/NombreLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_libro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/labelRegistro"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editNombreLibro"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/NombreLibro"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="@string/ingrese_libro"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,EditableContentDescCheck,LabelFor,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/FechaPrestamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_prestamo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/editNombreLibro"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editFechaPrestamo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/FechaPrestamo"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="Ingrese FechaP"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,EditableContentDescCheck,HardcodedText,LabelFor,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/FechaDevolucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_devolucion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/editFechaPrestamo"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editFechaDevolucion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/FechaDevolucion"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="Ingrese FechaD"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,EditableContentDescCheck,HardcodedText,LabelFor,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/Botonconfirm"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/confirmar_devolucion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFechaDevolucion" />

        <Button
            android:id="@+id/BotonRegresar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/regresar_al_menu"
            app:layout_constraintStart_toEndOf="@+id/Botonconfirm"
            app:layout_constraintTop_toBottomOf="@+id/editFechaDevolucion" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
