<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fontFamily="@font/avenirregular"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="172dp"
            android:layout_height="103dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/aqui_va_la_imagen"
            android:src="@drawable/logoutp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Ingrese Nombres"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/ImageView"
            tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/DNI"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            tools:ignore="Autofill,MissingConstraints,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/Codigo"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Codigo"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/DNI"
            tools:ignore="Autofill,VisualLintTextFieldSize,TextContrastCheck,VisualLintOverlap"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/Telefono"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/Codigo"
            tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/Correo"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="textStart"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/Telefono"
            tools:ignore="Autofill,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="45dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@+id/Correo"
            tools:ignore="Autofill,MissingConstraints,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="45dp" />

        <Button
            android:id="@+id/RegUsuario"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:onClick="registrarUsuario"
            android:backgroundTint="#b3042b"
            android:text="@string/registrarme"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="45dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>